RESOLVED FIXED142213
Fix build warning in WebKit2/Shared module
https://bugs.webkit.org/show_bug.cgi?id=142213
Summary Fix build warning in WebKit2/Shared module
Shivakumar J M
Reported 2015-03-02 22:47:01 PST
Got below build warning on latest build, might have casued by issue: https://bugs.webkit.org/show_bug.cgi?id=138684 ../../Source/WebKit2/Shared/WebCoreArgumentCoders.cpp:368:13: warning: unused parameter ‘element’ [-Wunused-parameter] static void pathPointCountApplierFunction(void* info, const PathElement* element)
Attachments
Patch (1.24 KB, patch)
2015-03-03 00:32 PST, Shivakumar J M
simon.fraser: review-
simon.fraser: commit-queue-
Patch-Updated-Review1 (1.30 KB, patch)
2015-03-03 20:25 PST, Shivakumar J M
no flags
Shivakumar J M
Comment 1 2015-03-03 00:32:25 PST
Created attachment 247754 [details] Patch Fix build warning by using UNUSED_PARAM macro.
Simon Fraser (smfr)
Comment 2 2015-03-03 08:04:37 PST
Comment on attachment 247754 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=247754&action=review > Source/WebKit2/Shared/WebCoreArgumentCoders.cpp:370 > static void pathPointCountApplierFunction(void* info, const PathElement* element) > { > + UNUSED_PARAM(element); It would be better to just remove the parameter name.
Shivakumar J M
Comment 3 2015-03-03 20:25:08 PST
Created attachment 247828 [details] Patch-Updated-Review1 updated the patch as per review comments.
WebKit Commit Bot
Comment 4 2015-03-03 21:26:14 PST
Comment on attachment 247828 [details] Patch-Updated-Review1 Clearing flags on attachment: 247828 Committed r180988: <http://trac.webkit.org/changeset/180988>
WebKit Commit Bot
Comment 5 2015-03-03 21:26:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.