Fix build warning in WebKit2/Shared module. https://bugs.webkit.org/show_bug.cgi?id=142213

Reviewed by Simon Fraser.

Fix build warning by removing argument name from function.

* Shared/WebCoreArgumentCoders.cpp:
(IPC::pathPointCountApplierFunction):


Canonical link: https://commits.webkit.org/160306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180988 268f45cc-cd09-0410-ab3c-d52691b4dbfc